Completed: TPV-407 - All - Change tittle of My Watchlist to My Favorite

--- a/app/src/main/res/values-hi/arrays.xml
+++ b/app/src/main/res/values-hi/arrays.xml
@@ -3,7 +3,7 @@
 
     <string-array name="more_with_login">
         <item>Manage Account</item>
-        <item>My Watchlist</item>
+        <item>My Favorite</item>
         <item>My Watch History</item>
         <item>My Downloads</item>
         <item>VIPA Kids</item>
@@ -32,7 +32,7 @@
 
     <string-array name="more_with_verify">
         <item>Manage Account</item>
-        <item>My Watchlist</item>
+        <item>My Favorite</item>
         <item>My Watch History</item>
         <item>My Downloads</item>
         <item>Contact Us</item>
@@ -46,7 +46,7 @@
 
     <string-array name="more_logout">
         <item>Manage Account</item>
-        <item>My Watchlist</item>
+        <item>My Favorite</item>
         <item>My Watch History</item>
         <item>My Downloads</item>
         <item>VIPA Kids</item>
