--- a/app/src/main/res/layout/list_item_notification.xml
+++ b/app/src/main/res/layout/list_item_notification.xml
@@ -26,7 +26,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:ellipsize="end"
             android:fontFamily="@font/sukhumvittadmai_medium"
+            android:maxLines="2"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/tv_message"
             app:layout_constraintEnd_toStartOf="@id/tv_date"
@@ -39,7 +42,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:ellipsize="end"
             android:fontFamily="@font/sukhumvittadmai_normal"
+            android:maxLines="2"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/tv_title"
             app:layout_constraintStart_toStartOf="@id/tv_title"
@@ -53,6 +59,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="12dp"
             android:fontFamily="@font/sukhumvittadmai_normal"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/iv_banner"
             tools:text="22 Dec" />
