updated divider color and deleted duplicate delete icon

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -143,6 +143,6 @@
     <color name="link">#007AFF</color>
     <color name="alert_badge">#EB5757</color>
     <color name="sub_heading">#B3B3B3</color>
-    <color name="notification_divider">#8A8783</color>
+    <color name="notification_divider">#373737</color>
 
 </resources>
