--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -202,7 +202,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_delete"
+                    app:srcCompat="@drawable/delete_icon"
                     app:tint="@color/white" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
