--- a/app/src/main/res/layout/list_item_notification.xml
+++ b/app/src/main/res/layout/list_item_notification.xml
@@ -28,6 +28,7 @@
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/sukhumvittadmai_medium"
+            android:includeFontPadding="false"
             android:maxLines="2"
             android:textSize="15sp"
             android:textStyle="bold"
@@ -35,6 +36,8 @@
             app:layout_constraintEnd_toStartOf="@id/tv_date"
             app:layout_constraintStart_toEndOf="@id/iv_banner"
             app:layout_constraintTop_toTopOf="@id/iv_banner"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintVertical_chainStyle="packed"
             tools:text="Notification title" />
 
         <TextView
@@ -44,6 +47,7 @@
             android:layout_marginTop="4dp"
             android:ellipsize="end"
             android:fontFamily="@font/sukhumvittadmai_normal"
+            android:includeFontPadding="false"
             android:maxLines="2"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -59,6 +63,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="12dp"
             android:fontFamily="@font/sukhumvittadmai_normal"
+            android:includeFontPadding="false"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/iv_banner"
